{
    "name": "MapEditor",
    "maps": [
        {
            "name": "MapEditor",
            "id": "0cc30346-b77a-4a0a-ba32-0acc8f23692e",
            "actions": [
                {
                    "name": "OnScroll",
                    "type": "Value",
                    "id": "59ad0066-d97c-4099-ba5f-2729e0f80e8f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnLeftButton",
                    "type": "Button",
                    "id": "8db35276-2aa2-467d-9993-b9b5ea6d6aba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnRightButton",
                    "type": "Button",
                    "id": "3fe34044-1cb6-4bee-9c7d-4face4b97b48",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnLeftButtonMove",
                    "type": "Value",
                    "id": "a41d6e82-1540-4501-ab3c-92ad0e29ce90",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnRightButtonMove",
                    "type": "Value",
                    "id": "03d9278e-9f97-417b-b21f-bf3ca9bf621d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnScrollButton",
                    "type": "Button",
                    "id": "c3bc31f3-0102-4e4e-86f2-8fdd1794c768",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0cd6671e-b30c-4557-8b22-727e2612bc32",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ed8d14a-b387-4c53-8a51-80dfa7559ed3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnLeftButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3855e30-ba79-455f-8055-b64b7aeb7da3",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnRightButtonMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "531a1292-5f6a-4f93-a2ec-054e083d9ae6",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnLeftButtonMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a0e86fb-1e80-4b36-bd85-d0385362b002",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnRightButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef55ef3c-c0c2-49b9-b417-934596e97856",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnScrollButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}